--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.8.2",
+    "nanoid": "^4.0.0",
     "react": "^17.0.2",
+    "react-3d-viewer": "^1.0.12",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.4",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
