--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-3d-viewer": "^1.0.12",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.4",
