--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@coreui/coreui": "^4.1.6",
     "@coreui/react": "^4.2.2",
+    "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
@@ -19,12 +20,14 @@
     "react-3d-viewer": "^1.0.12",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.4",
+    "react-vertical-timeline-component": "^3.5.2",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
