--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
+    "react-player": "^2.10.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.4",
     "react-vertical-timeline-component": "^3.5.2",
+    "react-youtube": "^9.0.2",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
