--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-youtube": "^9.0.2",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
+    "three": "^0.141.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
